# sample-getdp

./: .gitignore  README.md  example_getdp_usage.py  example_vtk_usage.py  output.vtk  pyproject.toml  vis.ipynb
config/: main.yaml
config/experiment/: magnetic_forces.yaml  microstrip.yaml
config/experiments/: magnetic_forces.yaml  microstrip.yaml
src/: config.py  create_distribution.py  main.py  run_experiments.py  visualize_vtk.py
src/config/: experiment_config.py  path.py
src/experiment/: __init__.py  factory.py  magnetic_forces.py  microstrip.py  types.py
src/experiments/: __init__.py  microstrip.py
src/getdp/: getdp.py  getdp_cli.py  render_template.py
src/samplers/: __init__.py  base.py  loguniform.py  normal.py  sample_context.py  uniform.py  uniform_discrete.py
templates/: microstrip.pro.j2
templates/MagenticForces/: magnets.geo.j2
templates/MagneticForces/: magnets_common.pro.j2
templates/Microstrip/: README.md  microstrip.geo.j2
templates/magnetic_forces/: InfiniteBox.geo
