[project]
name = "distribution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gmsh>=4.13.1",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "meshio>=5.3.5",
    "numpy>=2.3.1",
    "pillow>=11.2.1",
    "pyvista[all]>=0.43.0",
    "trame>=3.10.2",
]
